[package]
name = "lndev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
estimated_read_time = "1.0.0"
gray_matter = "0.2.6"
markdown = "1.0.0-alpha.16"
serde = { version = "1.0.196", features = ["derive"] }
url = "2.5.0"
walkdir = "2.4.0"
